--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -10,6 +10,9 @@ on:
     
 jobs:
   build:
+    permissions:
+      contents: read
+      packages: write  
     strategy:
       fail-fast: true
       matrix:
