--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -29,7 +29,7 @@ jobs:
         K6_VERSION=1.5.0
       docker_platform: ${{ matrix.build.platform }}
       docker_push: true
-      docker_digest_name: digests-spring-boot
+      docker_digest_name: digests-k6
       docker_registry_url: ghcr.io
     secrets:
       DOCKER_REGISTRY_USERNAME: ${{ github.actor }}
